--- a/Themes/default/css/FirstTopicImage/styles.css
+++ b/Themes/default/css/FirstTopicImage/styles.css
@@ -94,6 +94,7 @@
 {
 	width: 150px;
 	height: 200px;
+	object-fit: cover;
 	margin: 0 auto;
 	text-align: center;
 	box-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
