load the images horizontally
Signed-off-by: Diego Andrés <diegoandres_cortes@outlook.com>

--- a/Themes/default/css/FirstTopicImage/styles.css
+++ b/Themes/default/css/FirstTopicImage/styles.css
@@ -90,6 +90,9 @@
 {
 	margin: 5px 35px 20px;
 }
+.firstopicimage-slick {
+	display: flex;
+}
 .firstopicimage-slick div.resize_image > a > img
 {
 	width: 150px;
